# ecole

./: .gitignore  README.md
21sh/: -  .nfs.20051071.3923  21sh  Makefile  coca  coco  debug.sh  debug_term.txt  leaks.txt  modif  o.txt  t  val_errors.txt
21sh/headers/: 42sh_errors.h  ft_minishell2.h  ft_termcaps.h  (+2 more)
42sh/: ._eval_expr  .gitignore  42sh  CMakeLists.txt  Makefile  auteur  debug.sh  debug_term.txt
computerV1/: Makefile  auteur  computor
fillit/: 42_0.txt  Makefile  debug.sh  fillit  output.txt  t.txt  test.txt  test0.txt  test1.txt  test2.txt  test_incorrect.txt
ft_ls/: Makefile  deb.sh  ft_ls
ft_select/: ._libft  Makefile  cmd_creer_liste  deb.sh  ft_select  ft_select.cfg  liste  norminette.txt  text.tt
ftp/: Makefile  get_next_line.c  get_next_line.h
ftp.bk/: Makefile
irc/: Makefile
lem-in/: 1_ant_only.map  1_path_only.map  Makefile  cp.txt  debug.sh  empty_line.map  end_not_linked.map  lem-in  no_ants.map  no_end.map  no_start.map  output.txt  redefined_end.map  redefined_room.map  redefined_room2.map  redefined_start.map  start_equals_end.map  start_not_linked.map  test0.map  test1.map  test_parser.map  wrong_link.map
m42sh/: Makefile  debug_term.txt  local_var.txt  norminette.txt
minishell2/: Makefile  caca  cici  coco  com  ft_minishell2.cfg  ft_minishell_2
n-puzzle/: CMakeLists.txt  notes.docx
n-puzzle/headers/: n_puzzle.h
n-puzzle/srcs/: AAlgorithm.cpp  AAlgorithm.hpp  AHeuristic.cpp  AHeuristic.hpp  AlgoAStar.cpp  AlgoAStar.hpp  HeuManhattan.cpp  HeuManhattan.hpp  Manager.cpp  Manager.hpp  State.cpp  State.hpp  main.cpp
(+1095 files in other folders)
